# cookiecutter-pypackage

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  cookiecutter.json  mkdocs.yml  tox.ini
docs/: faq.md  history.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
